@@ -14,19 +14,6 @@ namespace ContractConfigurator
      */
     public class AllFactory : ParameterFactory
     {
-        protected string title { get; set; }
-
-        public override bool Load(ConfigNode configNode)
-        {
-            // Load base class
-            bool valid = base.Load(configNode);
-
-            // Get title
-            title = configNode.HasValue("title") ? configNode.GetValue("title") : "Complete ALL of the following:";
-
-            return valid;
-        }
-
         public override ContractParameter Generate(Contract contract)
         {
             return new Parameters.All(title);
